...
        if hiddenCount > 0 {
            let text = (hiddenCount == 1) ? "1 pipeline" : "\(hiddenCount) pipelines"
            Button("(\(text) hidden)") { }
            .disabled(true)
        }
        Divider()
        Button("Pipelines") {
            NSApp.activateThisApp()
            openWindow(id: "pipeline-list")
        }
        Divider()
        Button("About CCMenu") {
            NSApp.activateThisApp()
...

    }

    static func viewModelForPreview() -> PipelineModel {
        let model = PipelineModel()

        var p0 = Pipeline(name: "connectfour", feed: PipelineFeed(type: .cctray, url: URL(string: "http://localhost")!, name: "connectfour"))
        p0.status.activity = .building
        p0.status.lastBuild = Build(result: .failure)
        p0.status.lastBuild!.timestamp = ISO8601DateFormatter().date(from: "2020-12-27T21:47:00Z")

        var p1 = Pipeline(name: "ccmenu2 (build-and-run)", feed: PipelineFeed(type: .github, url: URL(string: "http://localhost")!, name: ""))
        p1.status.activity = .sleeping
...
